--- a/index.html
+++ b/index.html
@@ -2,9 +2,26 @@
 <html lang='ru'>
 <head>
     <meta charset='UTF-8'>
-    <title>simple_project</title>
+    <title>Мир пончиков</title>
 </head>
+<style>
+ body {
+            font-family: sans-serif;
+            text-align: center; 
+        }
+        h1 {
+            margin-bottom: 20px; 
+        }
+        img {
+            max-width: 50%; 
+            height: auto; 
+            display: block;
+            margin: 0 auto; 
+        }
+</style>
 <body>
-  <h1>Hello, World!</h1>
+    <h1>Мир пончиков</h1>
+    <img src="https://i.pinimg.com/474x/f6/44/37/f64437d0e24709c257e3f0bf11004cc5.jpg">
+    <img src="https://i.pinimg.com/474x/b5/5c/c5/b55cc5a43934f3efc298aee00d51eadb.jpg">
 </body>
 </html>
